--- a/neocities-carcinoj3nny/index.html
+++ b/neocities-carcinoj3nny/index.html
@@ -18,7 +18,7 @@
                 <nav id="navbar" style="margin-bottom: 10px;">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Link</a></li>
+                        <li><a href="./music.html">Music</a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
@@ -132,9 +132,9 @@
                 }
 
                 /* the order of the items is adjusted here for responsiveness!
-      since the sidebars would be too small on a mobile device.
-      feel free to play around with the order!
-      */
+                since the sidebars would be too small on a mobile device.
+                feel free to play around with the order!
+                */
                 main {
                     order: 1;
                 }
