adding music.html

--- a/neocities-carcinoj3nny/music.html
+++ b/neocities-carcinoj3nny/music.html
@@ -17,7 +17,7 @@
                 </div>
                 <nav id="navbar" style="margin-bottom: 10px;">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="./music.html">Music</a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
@@ -83,7 +83,7 @@
                     <h1>jenny's place</h1>
                     <p><strong>an experiment in loving the internet again!</strong></p>
                     <p>
-                     This is the template page. You shouldn't be here! 
+                     <img src=img/topster.jpg, width="100%">
                     </p>
 
 
