--- a/neocities-carcinoj3nny/music.html
+++ b/neocities-carcinoj3nny/music.html
@@ -83,7 +83,7 @@
                     <h1>jenny's place</h1>
                     <p><strong>an experiment in loving the internet again!</strong></p>
                     <p>
-                     <img src=img/topster.jpg, width="100%">
+                     <img src="img/topster.jpg", width="100%">
                     </p>
 
 
