moving song off of github, too large for neocities

--- a/neocities-carcinoj3nny/music.html
+++ b/neocities-carcinoj3nny/music.html
@@ -494,7 +494,7 @@ input[type=range] {
         let track_list = [
             {
                 name:"tektro: demo",
-                path:"./sound/TektroDemo.wav
+                path:"https://cdn.jsdelivr.net/gh/carcinoj3nny/neocities@master/neocities-carcinoj3nny/sound/TektroDemo.wav"
             }
         ];
         //
