changing style of h1 on music

--- a/neocities-carcinoj3nny/music.html
+++ b/neocities-carcinoj3nny/music.html
@@ -80,13 +80,13 @@
                     </ul>
                 </aside>
                 <main>
-                    <h1>music I love</h1>
+                    <h1 style="font-family: Nunito">music I love</h1>
                     <p><strong>an experiment in loving the internet again!</strong></p>
                     <p>
                       Here are my favorite albums, loosely sorted.<br>
                      <img src="img/topster.jpg", width="100%">
                     </p>
-                    <h1> "music I made" </h1>
+                    <h1 style="font-family: Nunito"> "music I made" </h1>
                     <head>
 <!----- 
  
